--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,31 +1,41 @@
-name: Run Crop Production Notebook
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  run-notebook:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    - name: ⬇️ Checkout code
+      uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: 🐍 Set up Python
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: 3.10
 
-    - name: Install dependencies
+    - name: 📦 Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install nbconvert jupyter pandas matplotlib seaborn
+        pip install nbconvert nbformat
 
-    - name: Execute notebook
-      run:
-        jupyter nbconvert --to notebook --execute "CropProductionProject_(3).ipynb" --output "executed_notebook.ipynb"
+    - name: 🧪 Run Notebook
+      run: |
+        jupyter nbconvert --to notebook --execute CropProductionProject_\(3\).ipynb --output executed_notebook.ipynb
 
+    - name: 🐳 Log in to DockerHub
+      run: echo "${ secrets.DOCKER_PASSWORD }" | docker login -u "${ secrets.DOCKER_USERNAME }" --password-stdin
+
+    - name: 🔧 Build Docker image
+      run: docker build -t rohanwaghade/crop-production:latest .
+
+    - name: 📤 Push Docker image
+      run: docker push rohanwaghade/crop-production:latest
